gitops/s3manager/s3manager-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3-manager
  labels:
    app.kubernetes.io/name: s3-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: s3-manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: s3-manager
    spec:
      volumes:
      - name: cookie-secret-vol
        emptyDir: {}
      containers:
      - name: s3-manager
        image: cloudlena/s3manager:latest
        securityContext:
          capabilities:
            drop:
            - ALL
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.15.4
        ports:
          - containerPort: 4180
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
        volumeMounts:
        - name: cookie-secret-vol
          mountPath: /secret
          readOnly: true

---
kind: Service
apiVersion: v1
metadata:
  name: s3-manager
spec:
  selector:
      app.kubernetes.io/name: s3-manager
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: oauth2
    port: 4180
    targetPort: 4180

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s3-manager
spec:
  tls:
  - hosts:
      - r2.buc.sh
    secretName: cert-r2-buc-sh
  rules:
  - host: r2.buc.sh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: s3-manager
            port:
              name: oauth2
